text alignment, desc length fix

--- a/themes/advanced/styles/global.less
+++ b/themes/advanced/styles/global.less
@@ -7,18 +7,6 @@ h1, h2, h3, p, blockquote{
 	margin-bottom: 25px;
 }
 
-.align-center{
-	text-align: center;
-}
-
-.align-left{
-	text-align: left;
-}
-
-.align-right{
-	text-align: right;
-}
-
 p, blockquote{
 	line-height: 25px;
 }
